More efficient to use valueOf (Findbugs)
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/validator/trunk@1782756 13f79535-47bb-0310-9956-ffa450edef68